# DevFlow-AI

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f9e8524a4b6_no_changes_expected.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  deps.py  organizations.py  projects.py  router.py  sprints.py  tasks.py
backend/app/application/services/: auth_service.py  authorization.py  label_service.py  organization_service.py  project_service.py  sprint_service.py  task_service.py
backend/app/core/: config.py  exceptions.py  logging.py  main_limiter.py  security.py  slugify.py  token_hashing.py
backend/app/domain/repositories/: label_repository.py  organization_repository.py  project_repository.py  refresh_token_repository.py  sprint_repository.py  task_repository.py  user_repository.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/database/models/: __init__.py  activity_log.py  ai_analysis.py  auth.py  document.py  enums.py  mixins.py  notification.py  organization.py  project.py  sprint.py  task.py  user.py
backend/app/infrastructure/database/repositories/: label_repository.py  organization_repository.py  project_repository.py  refresh_token_repository.py  sprint_repository.py  task_repository.py  user_repository.py
backend/app/infrastructure/email/: email_service.py
backend/app/schemas/: auth.py  organization.py  project.py  sprint.py  task.py  user.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py
docs/: database-schema.md
frontend/: .env.example  Dockerfile  (+6 more)
(+6 files in other folders)
