[project]
name = "devflow-ai-backend"
version = "0.1.0"
description = "DevFlow AI - AI-Powered Software Engineering & DevOps Management Platform (Backend)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    "fastapi[standard]==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "redis==5.2.1",
    "celery[redis]==5.4.0",
    "pyjwt==2.10.1",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "anthropic==0.42.0",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
    "orjson==3.10.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.1",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "types-redis==4.6.0.20241004",
    "pytest-dotenv==0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env_files = [".env.test"]
